--- a/styles.css
+++ b/styles.css
@@ -45,5 +45,6 @@ body {
     width: 100%;
     background-color: #f8f9fa;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 10px;
+
 }
